--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Primary Meta Tags -->
-    <title>Daniel Ezekiel - Software Engineer</title>
+    <title>Anand Boge - Frontend Developer</title>
     <meta name="title" content="Anand Boge - Frontend Engineer" />
     <meta name="keywords" content="Anand Boge, Web Developer" />
 
